--- a/css/style.css
+++ b/css/style.css
@@ -254,25 +254,17 @@ bio-data-section
     align-items: center;
  }
  .bio-image-data{
-    width: 30%;
+    width: 80%;
     /* box-shadow: -2rem -2rem 0 0 rgba(194, 200, 24, 0.486); */
     box-shadow: -2rem -2rem 0 0 var(--helper) ;
     border-radius: 10%;
     display: inline-block;
-    position: absolute;
+    position: relative;
     z-index: -1;
    
 
  }
- .position{
-    position: relative;
-    top: 20rem;
-    left:20rem;
-    width: 30rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
- }
+ 
  
  .bio-data-stats{
     display: flex;
@@ -632,9 +624,44 @@ scroll section
 
 /*============================================================
 media query section
-=============================================================*/
+/* =============================================================*/
 
-@media (max-width:980px){
+
+
+/* em  deafult em is 16px*/
+/* 95em ==9500px */
+@media(max-width:95em)
+{
+    .container{
+        max-width: 130rem;
+        padding: 0 3.2rem;
+    }
+    .nav-list{
+        gap: 2rem;
+    }
+}
+/* 1200px */
+@media(max-width:75em)
+{
+    html{
+        font-size: 56.43%;
+    }
+    .container{
+        max-width: 110rem;
+    }
+    .grid{
+        gap:4.3rem;
+    }
+    
+}
+
+@media (max-width:61em){
+    html{
+        font-size: 50%;
+    }
+    .section-hero h1{
+        line-height: 1.05;
+    }
     .header{
         position: relative;
     }
@@ -682,7 +709,7 @@ media query section
     }
     .active .navbar{
         transform: translateX(0%);
-    
+        
 
         visibility: visible;
         opacity: 1;
@@ -693,5 +720,97 @@ media query section
     }
     .active .navbar-mobile-btn .navbar-mobile-icon[name="close-outline"]{
         display: block;
+    }
+    .service-section .grid-three-column{
+grid-template-columns: repeat(2,1fr);
+    }
+    .service-section .grid{
+        gap: 5rem;
+    }
+    .footer  .grid-four-column{
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
+        
+ /* 790px ==49em*/
+@media(max-width:49em)
+        {
+                 .container{
+              max-width: 75rem;
+            }
+            .section-hero .grid-two-column{
+                grid-template-columns: 1fr;
+            }
+            .section-hero img , .section-biodata img{
+                width: 70%;
+            }
+            .section-hero-data{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            
+            }
+            .hero-para{
+                margin-top: 2rem;
+            }
+            .hero-top-data{
+                margin-bottom: 1rem;
+                font-weight: bold;
+            }
+            .section-biodata .grid-two-column{
+                grid-template-columns: 1fr;
+            }
+            .section-biodata .bio-image{
+                grid-row: 2/3;            /* grid-row-starrt :2; grid-row-end:3;*/
+                margin-top: 3.2rem;
+            }
+            /* Projects section  */
+            .section-portfolio .grid-three-column{
+        grid-template-columns: 1fr 1fr;
+            }
+            
+} 
+
+
+/*below 560px ==560/16em that is 35em*/
+@media(max-width:35em)
+{
+    .header{
+        padding: 0 3.2rem;
+    }
+ .logo{
+        width: 50%;
+    }
+    .p-btns{
+        gap: 2.5rem;
+    }
+    .p-btn{
+        padding: 1rem 2rem;
+    }
+    .service-section  .grid-three-column{
+    grid-template-columns: 1fr ;
+    }
+    .section-free h2{
+        font-size: 3.2rem;
+    }
+    .contact-container .grid-two-column{
+        grid-template-columns: 1fr;
+    }
+    .contact-main-section input[type="submit"] {
+        border: none;
+        width: 35%;
+    }
+    .contact-container {
+        padding : 0 3.2rem;
+    }
+    .footer .f-about ,
+    .footer .f-address{
+        grid-column: 1/-1;
+    }
+    .section-free{
+        background-repeat: none;
+    background-size: 100%;
+    background-attachment: fixed;
     }
 }
